--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab on Git & GitHub</title>
-    <link rel="stylesheet" href="style.css">
+    <title>photos</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <!-- Replace John Doe with your name -->
-
-    <p>Hi, I am John Doe, I am a Kalvian.</p>
-
+   <span><p id="word">Image Gallery</p></span>
+   <div id="image">
+    
+        <img src="https://1.bp.blogspot.com/-Xnxjviu9tSs/WkxsqUMxTTI/AAAAAAAAGh8/7SVCE4fXqmU3JK8sPDWlThpAUtFgzV8AwCLcBGAs/s1600/0J3A2543.jpg" alt="keerthi">
+        <img src="https://www.behindwoods.com/tamil-actress/keerthy-suresh/keerthy-suresh-stills-photos-pictures-406.jpg" alt="keerthi">
+        <img src="https://th.bing.com/th/id/R.458aba43e99375a5c9ef4ab9491554e7?rik=iSpIzHXFFyX4Qw&riu=http%3a%2f%2fwww.hotactresslook.com%2fwp-content%2fuploads%2f2016%2f12%2fkeerthi-suresh-sexy-pics.jpg&ehk=mj7buC0m2FYZfzH5hDGPOdyfxBssrEEtheCHxczWuw0%3d&risl=&pid=ImgRaw&r=0" alt="keerthi">
+        <img src="https://th.bing.com/th/id/R.c1403c5f6c2bf03395a3d76637a26c5b?rik=0K7KyejY3CnM8w&riu=http%3a%2f%2f2.bp.blogspot.com%2f-2jwSuuktsJo%2fVXkV8cYIGaI%2fAAAAAAAAvUs%2fGsmP0KJktb8%2fs1600%2f29927-013.jpg&ehk=4qZA53g5EiHlAIuvv%2bDi8P6sNyd65h09jJzzlQkf5v8%3d&risl=&pid=ImgRaw&r=0" alt="keerthi">
+        <img src="https://wallpaperaccess.com/full/1344369.jpg" alt="keerthi">
+        <img src="https://th.bing.com/th/id/R.ebdff3aa2d657b80d3b0e93f9c0aace9?rik=rxwDWN5o8Gdbpg&riu=http%3a%2f%2f3.bp.blogspot.com%2f-nW15_9VJMVM%2fVof4ALFl4YI%2fAAAAAAAAbV8%2fPtRHsHyyVF0%2fs1600%2fKeerthi-Suresh-Latest-Photos-8.jpg&ehk=KbpfdtiAUz72jgXJOVTCkc3G6IAChyc2nkv1YYQfMMs%3d&risl=&pid=ImgRaw&r=0" alt="keerthi">
+        <img src="https://i.pinimg.com/originals/c7/d2/36/c7d236ac6fd75a2ca570a83307b8fcbf.jpg" alt="keerthi">
+        <img src="https://i.pinimg.com/originals/ee/0f/ae/ee0faebd4c5f1bd5f9118ec5bdfdda7e.jpg" alt="keerthi">
+        <img src="https://i.pinimg.com/originals/e2/8e/ed/e28eed1332119fb92e280bf69823def3.jpg" alt="keerthi">
+    
+   </div>
 </body>
-
 </html>
